# CMakeUnitTest

./: CMakeLists.txt  Makefile  README.md  vcpkg.json
app/: CMakeLists.txt  main.cc
build_result/: build_log.txt
cmake/: LTO.cmake  Sanitizers.cmake  Warnings.cmake
src/my_lib/: CMakeLists.txt
